[Bug #75988] PRIVACY - IE8 - Footer and share icons not aligned. (Fixed)

--- a/tourismaustralia-styleguide/assets/scss/site/_ie8-overrides.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/_ie8-overrides.scss
@@ -156,9 +156,9 @@ body{
 // footer centering
 .footer-col {
   width: 100% !important;
-  text-align: center !important;
+  text-align: left !important;
   li {
-    display: inline-block !important;
+    display: block !important;
     margin-right: 1em !important;
   }
   .dropdown-select-countrylanguage{
@@ -166,7 +166,7 @@ body{
   }
   .footer-copyright {
     width: 100% !important;
-    text-align: center !important;
+    text-align: left !important;
   }
 }
 
